# leptos-markdown

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: main.yml
examples/custom_component/: Cargo.toml  index.html  markdown.css
examples/custom_component/src/: main.rs
examples/editor/: Cargo.toml  index.html
examples/editor/src/: main.rs
examples/onclick/: Cargo.toml  index.html
examples/onclick/src/: main.rs
examples/showcase/: Cargo.toml  index.html  markdown.css
examples/showcase/src/: main.rs
feedback/: README.md
src/: component.rs  lib.rs  render.rs  utils.rs
src/parse/: mod.rs  token.rs
