[package]
name = "leptos-markdown"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version="0.4.6", features=["csr", "nightly"]}

pulldown-cmark-wikilink = { version="0.1.1", git="https://github.com/rambip/pulldown-cmark-wikilink" }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
katex = {version="0.4", default-features=false, features=["wasm-js"]}

wasm-logger = "0.2.0"
log= "0.4.17"
wasm-bindgen="0.2.84"
web-sys = {version="0.3.61", features=["MouseEvent"]}


[dev-dependencies]
wasm-test = {git="https://github.com/rambip/wasm-test"}

[workspace]
members = [
    "examples/*"
]

