[package]
name = "leptos-markdown"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version="0.5", features=["csr"]}

rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }

wasm-bindgen="=0.2.87"

[features]
default = []
debug = []


[workspace]
members = [
    "examples/*"
]

