[package]
name = "leptos-markdown"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version="0.5", features=["csr"]}

rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }

wasm-bindgen="0.2"

[features]

default = []
debug = ["rust-web-markdown/debug"]


[workspace]
members = [
    "examples/*"
]

