[package]
name = "custom_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version="0.5", features=["nightly", "csr"]}

leptos-markdown = {path= "../..", features=["debug"]}
wasm-bindgen = "0.2.84"
web-sys = {version="0.3.61", features=["HtmlTextAreaElement"]}

console_error_panic_hook = "0.1.7"
