[package]
name = "markdown-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version="0.4.6", features=["nightly", "csr"]}

leptos-markdown = {path= "../..", features=["debug"]}
wasm-bindgen = "0.2.84"
web-sys = {version="0.3.61", features=["HtmlTextAreaElement"]}

wasm-logger = "0.2.0"
log= "0.4.17"
console_error_panic_hook = "0.1.7"
